# esp-at

./: .gitlab-ci.yml  .glab-ci.yml  CMakeLists.txt  build.py
.github/workflows/: build_esp32.yml  build_esp32c2.yml  build_esp32c3.yml  build_esp32c5.yml  build_esp32c6.yml  build_esp32s2.yml  build_template_esp32.yml  build_template_esp32c2.yml  build_template_esp32c3.yml  build_template_esp32c5.yml  build_template_esp32c6.yml  build_template_esp32h2.yml  build_template_esp32s2.yml  main.yml
.gitlab/ci/: build_esp32h2.yml  build_template.yml
components/at/: CMakeLists.txt  idf_component.yml
components/at/include/: esp_at_core.h
components/at/lib/: VERSION
components/at/private_include/: at_ota_token.h
components/at/src/: at_default_config.c  at_user_cmd.c
components/customized_partitions/raw_data/factory_param/: factory_param_data.csv
components/decoder/: CMakeLists.txt
docs/_static/js/: chatbot_widget_cn.js  chatbot_widget_en.js
main/: Kconfig  app_main.c
main/interface/include/: at_uart.h
main/interface/sdio/: at_sdio_task.c
main/interface/socket/: at_socket_task.c
main/interface/spi/: at_spi_task.c
main/interface/uart/: at_uart_api.c  at_uart_task.c
module_config/module_esp32c2-2mb-g2-no-ota/: partitions_at.csv  sdkconfig.defaults  sdkconfig_silence.defaults
module_config/module_esp32c5_default/: sdkconfig.defaults
module_config/module_esp32c5_default/patch/: patch_list.ini
module_config/module_esp32c61_default/: sdkconfig.defaults  sdkconfig_silence.defaults
module_config/module_esp32h2_default/: at_customize.csv  partitions_at.csv  sdkconfig.defaults  sdkconfig_silence.defaults
module_config/module_esp8266_1mb/: sdkconfig.defaults  sdkconfig_silence.defaults
patches/: patch_list.ini
tools/: patch.py
